# se-toolkit-hackathon

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_parse_source.py
backend/app/: main.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: ai.py  auth.py  integrations.py  items.py  planner.py  reminders.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/integrations/: google_calendar_client.py  mistral_client.py
backend/app/models/: __init__.py  auth_session.py  integration_metadata.py  mixins.py  occurrence_state.py  parsed_draft.py  planner_item.py  recurrence_rule.py  reminder.py  sync_state.py  user.py
backend/app/schemas/: ai.py  auth.py  common.py  integration.py  item.py  planner.py
backend/app/services/: ai_parser.py  auth.py  bootstrap.py  google_sync.py  planner.py  reminders.py
backend/app/utils/: datetime.py  recurrence.py  wait_for_db.py
backend/plansync_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_ai_parse.py  test_auth.py  test_bootstrap.py  test_google_sync.py  test_items.py  test_recurrence.py
docs/: api-contract.md  architecture.md  deployment.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: app.tsx  providers.tsx  query-client.ts  router.tsx
frontend/src/lib/: i18n.tsx
(+23 files in other folders)
